# hue

./: .gitignore  CLAUDE.md  base.mk  ruff.toml
.claude/: settings.json
.claude/commands/: check.md  docs.md  new-component.md  new-django-view.md
.github/workflows/: ci.yml  docs.yml
hue-django/: Makefile  demo_skeleton.py  pyproject.toml
hue-django/docs/: async.md  css.md  views.md
hue-django/src/hue_django/: apps.py  conf.py  html.py  middleware.py  pages.py  router.py  skeletonize.py  ui.py  urls.py  views.py
hue-django/src/hue_django/static/hue/styles/: tailwind.css
hue-django/tests/: conftest.py  test_middleware.py  test_skeletonize.py  test_views.py  test_views_deferred.py  test_views_hue_fragments.py  test_views_hue_view.py
hue-docs/: Makefile  README.md  pyproject.toml
hue-docs/src/hue_docs/: __init__.py  __main__.py  build.py  categories.py  discovery.py  models.py  registry.py  render.py  showcases.py  site.py
hue-docs/src/hue_docs/content/: __init__.py  _prose.py  django_css.py  django_views.py  framework.py  icons.py  installation.py  intro.py  skeleton_loading.py  usage.py
hue-docs/src/hue_docs/examples/: __init__.py  button.py  callout.py  icon.py  inputs.py  label.py  spacer.py  stack.py  text.py
hue-docs/src/hue_docs/layout/: code.py  highlight.py  page.py  playground.py  showcase.py  sidebar.py
hue-docs/src/hue_docs/showcase/: Checkbox.py  DataTable.py  Icon.py  Table.py  __init__.py
hue-docs/src/hue_docs/styles/: docs.input.css
hue-docs/tests/: test_build.py  test_discovery.py  test_site.py
hue-python/: Makefile  package-lock.json  package.json  pyproject.toml
hue-python/docs/: router.md
hue-python/docs/todo/: fastapi-static-notes.md
hue-python/hue/: exceptions.py  pages.py  renderer.py  router.py  utils.py
hue-python/hue/static/js/: index.js
hue-python/hue/static/styles/: tailwind.css
hue-python/hue/types/: core.py
hue-python/hue/ui/: __init__.py
hue-python/hue/ui/atoms/: stack.py  text.py
hue-python/src/hue/: assets.py  base.py  context.py  decorators.py  exceptions.py  formatter.py  hmr.py  pages.py  router.py  skeletonize.py  spacing.py  tailwind.py  types.py  utils.py
hue-python/src/hue/html/: __init__.py  element.py
hue-python/src/hue/static/js/: alpine-bundle.js  index.js
hue-python/src/hue/static/styles/: tailwind.css  tailwind.input.css
hue-python/src/hue/types/: core.py  css.py  html.py
hue-python/src/hue/ui/: __init__.py  _internal.py  base.py  button.py  callout.py  icon.py  input.py  spacer.py  stack.py  text.py
hue-python/src/hue/ui/atoms/: __init__.py  button.py  checkbox.py  icon.py  input.py  skeleton.py  spacer.py  stack.py  text.py
hue-python/src/hue/ui/molecules/: callout.py  table.py
hue-python/src/hue/ui/v2/: __init__.py  base.py  button.py  callout.py  icon.py  input.py  spacer.py  stack.py  text.py
hue-python/tests/: _a11y.py  conftest.py  test_assets.py  test_base.py  test_components.py  test_html_elements.py  test_router.py  test_skeletonize.py  test_utils.py  test_v2_components.py
hue-python/tests/components/: test_button.py  test_callout.py  test_checkbox.py  test_composition.py  test_datatable.py  test_icon.py  test_input.py  test_skeleton.py  test_spacer.py  test_stack.py  test_table.py  test_text.py
