[project]
name = "hue-django"
version = "0.1.0"
description = "Django integration for the hue component library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hue>=0.1.0",
    "django>=5.0",
]

[tool.uv.sources]

hue = { path = "../hue-python", editable = true }

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "django-stubs>=5.2.7",
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

##########
# Deptry #
##########

[tool.deptry]
known_first_party = ["hue_django"]
