[project]
name = "hue"
version = "0.1.0"
authors = [
    { name = "Daniel Kjellid", email = "daniel@kjellid.no" },
]
description = "A component library for Python and html template rendering engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arel>=0.4.0",
    "htmy>=0.8.2",
    "pytailwindcss>=0.3.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
extend = "../ruff.toml"

##########
# Deptry #
##########

[tool.deptry]
known_first_party = ["hue"]
extend_exclude = ["tests", "test_.*\\.py"]

[tool.deptry.per_rule_ignores]
DEP002 = ["arel", "pytailwindcss"]
